[project]
name = "autonotebooks"
version = "0.1.0"
description = "Parallelized NotebookLM notebook creation and artifact generation automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebooklm-mcp>=2.0.11",
    "rich>=14.3.3",
]

[tool.uv.scripts]
nlm = "notebooklm_mcp.cli:main"
